# vc_projecto

./: Relatorio_projecto.docx  Report.docx  readme.md
Eye_Tracker/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  projeto_vc
Eye_Tracker/math/: UUIDGenerator.cpp
Eye_Tracker/object/: Face.cpp
FaceTracker/: .cproject
FaceTracker/src/: Main.cpp  PupilDetector.cpp
FaceTracker/src/math/: Circle.cpp  RectUtils.cpp
FaceTracker/src/object/: Face.cpp  Nose.cpp
Thermal_Pi/: main_canny.cpp  main_sobel.cpp
docs/: Presentation.pptx  report.docx
source/ManualCalibration/src/: CMakeLists.txt  Main.cpp
source/face/: Main.cpp  PupilDetector.cpp
source/face/math/: RectUtils.cpp
source/face/object/: Eye.cpp  Face.cpp  Mouth.cpp
source/face/struct/: CircularQueue.cpp
source/thermal/: CMakeLists.txt  chessboard.cpp  main.cpp  main_capture.cpp
source/thermal/Chessboard_images/: Thumbs.db
